fixing small card spacing issues

--- a/frontend/src/styles/pages/index.css
+++ b/frontend/src/styles/pages/index.css
@@ -36,23 +36,9 @@ header .text h1 {
     margin: 0 auto;
     width: 75%;
     max-width: 1000px;
-    min-width: 850px;
+    min-width: 800px;
     display: flex;
     justify-content: space-between;
-}
-
-@media only screen and (max-width: 950px) {
-    .cards {
-        flex-direction: column;
-        align-items: center;
-        width: 100%;
-        max-width: none;
-        min-width: 0;
-    }
-
-    .cards > :global(*) {
-        margin-bottom: 30px;
-    }
 }
 
 @media only screen and (max-width: 900px) {
@@ -69,6 +55,22 @@ header .text h1 {
         text-align: left;
         padding-top: 60px;
         padding-bottom: 60px;
+    }
+
+    .cards-container {
+        padding: 50px 0;
+    }
+
+    .cards {
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+        max-width: none;
+        min-width: 0;
+    }
+
+    .cards > :global(*) {
+        margin-bottom: 30px;
     }
 }
 
